schema/testdata/errors/reserved_field_name_id.keel
model Person {
    fields {
        //expect-error:9:11:E006:Cannot use 'id' as it already exists as a built-in field
        id Text
    }
}
